<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deletePromptDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="350dp"
    android:background="@color/primary_theme"
    android:backgroundTint="#0DFFFFFF"
    android:paddingHorizontal="20dp"
    android:paddingVertical="15dp">

    <TextView
        android:id="@+id/input_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="Do you want to remove this product from the list?"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_dialog_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="@color/secondary_theme"
        android:fontFamily="@font/inter_semibold"
        android:text="NO"
        android:textColor="@color/primary_theme"></androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_dialog_title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:background="@color/secondary_theme"
        android:fontFamily="@font/inter_semibold"
        android:text="YES"
        android:textColor="@color/primary_theme">
    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>